--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,14 @@ default = []
 command_line = ["human-panic", "structopt", "tracing-subscriber"]
 
 [dependencies]
-ipnetwork = "0.20"
+ipnetwork = "0.21.*"
 lazy_static = "1.4.0"
 os-version = "0.2"
 pnet = {version = "0.35", features = ["std"] }
-quick-xml = "0.36"
+quick-xml = "0.37.*"
 regex = "1.3"
 reqwest = { version = "0.12", features = ["blocking"] }
-thiserror = "1.0"
+thiserror = "2.0.*"
 tracing = "0.1"
 
 # Command-Line fature dependencies
