--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ regex = "1.3"
 reqwest = { version = "0.12", features = ["blocking"] }
 thiserror = "2.0.*"
 tracing = "0.1"
+openssl = { version = "0.10.*", features = ["vendored"] }
 
 # Command-Line fature dependencies
 human-panic = { optional = true, version = "2.0" }
